; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_vio.c_kvmppc_tce_iommu_unmap.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kvm/extr_book3s_64_vio.c_kvmppc_tce_iommu_unmap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm = type { i32 }
%struct.kvmppc_spapr_tce_table = type { i64 }
%struct.iommu_table = type { i64 }

@H_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.kvm*, %struct.kvmppc_spapr_tce_table*, %struct.iommu_table*, i64)* @kvmppc_tce_iommu_unmap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @kvmppc_tce_iommu_unmap(%struct.kvm* %0, %struct.kvmppc_spapr_tce_table* %1, %struct.iommu_table* %2, i64 %3) #0 {
  %5 = alloca %struct.kvm*, align 8
  %6 = alloca %struct.kvmppc_spapr_tce_table*, align 8
  %7 = alloca %struct.iommu_table*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  %12 = alloca i64, align 8
  store %struct.kvm* %0, %struct.kvm** %5, align 8
  store %struct.kvmppc_spapr_tce_table* %1, %struct.kvmppc_spapr_tce_table** %6, align 8
  store %struct.iommu_table* %2, %struct.iommu_table** %7, align 8
  store i64 %3, i64* %8, align 8
  %13 = load i64, i64* @H_SUCCESS, align 8
  store i64 %13, i64* %10, align 8
  %14 = load %struct.kvmppc_spapr_tce_table*, %struct.kvmppc_spapr_tce_table** %6, align 8
  %15 = getelementptr inbounds %struct.kvmppc_spapr_tce_table, %struct.kvmppc_spapr_tce_table* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load %struct.iommu_table*, %struct.iommu_table** %7, align 8
  %18 = getelementptr inbounds %struct.iommu_table, %struct.iommu_table* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = sub i64 %16, %19
  %21 = shl i64 1, %20
  store i64 %21, i64* %11, align 8
  %22 = load i64, i64* %8, align 8
  %23 = load i64, i64* %11, align 8
  %24 = mul i64 %22, %23
  store i64 %24, i64* %12, align 8
  store i64 0, i64* %9, align 8
  br label %25

25:                                               ; preds = %41, %4
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* %11, align 8
  %28 = icmp ult i64 %26, %27
  br i1 %28, label %29, label %44

29:                                               ; preds = %25
  %30 = load %struct.kvm*, %struct.kvm** %5, align 8
  %31 = load %struct.iommu_table*, %struct.iommu_table** %7, align 8
  %32 = load i64, i64* %12, align 8
  %33 = load i64, i64* %9, align 8
  %34 = add i64 %32, %33
  %35 = call i64 @kvmppc_tce_iommu_do_unmap(%struct.kvm* %30, %struct.iommu_table* %31, i64 %34)
  store i64 %35, i64* %10, align 8
  %36 = load i64, i64* %10, align 8
  %37 = load i64, i64* @H_SUCCESS, align 8
  %38 = icmp ne i64 %36, %37
  br i1 %38, label %39, label %40

39:                                               ; preds = %29
  br label %44

40:                                               ; preds = %29
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %9, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %9, align 8
  br label %25

44:                                               ; preds = %39, %25
  %45 = load i64, i64* %10, align 8
  ret i64 %45
}

declare dso_local i64 @kvmppc_tce_iommu_do_unmap(%struct.kvm*, %struct.iommu_table*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
